[package]
name = "expm_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "*", features = ["blas"]}
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
# blas-src = {version = "*", features = ["intel-mkl"]}
rand = "*"
num-complex = "*"
ndarray-linalg = { path = "../ndarray-linalg/ndarray-linalg" }

